# ScreenTime

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ScreenTime.cpp  ScreenTime.h  main.cpp
ScreenTimeApp/: .gitignore  CMakeLists.txt  backend.cpp  backend.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
